--- a/public/index.html
+++ b/public/index.html
@@ -358,6 +358,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        align-items: stretch;
       }
 
       .status-list li {
@@ -370,12 +371,15 @@
         justify-content: space-between;
         gap: 0.5rem;
         align-items: center;
+        width: 100%;
+        min-height: 68px;
       }
 
       .status-list .empty {
         color: var(--subtle);
         font-weight: 400;
         font-size: 0.95rem;
+        justify-content: flex-start;
       }
 
       .person {
@@ -553,6 +557,12 @@
         gap: 0.5rem;
       }
 
+      .log-card h3 {
+        margin: 0;
+        letter-spacing: -0.01em;
+        text-transform: capitalize;
+      }
+
       .log-card table {
         width: 100%;
         border-collapse: collapse;
@@ -604,7 +614,24 @@
 
       @media (max-width: 640px) {
         body {
+          padding: 0.9rem;
+        }
+
+        main {
+          gap: 1rem;
+        }
+
+        .card {
           padding: 1.25rem;
+        }
+
+        .lists {
+          gap: 0.75rem;
+        }
+
+        .list-column {
+          padding: 0.9rem;
+          border-radius: 14px;
         }
 
         .form-actions {
@@ -618,6 +645,50 @@
 
         .role-actions {
           width: 100%;
+        }
+
+        .log-card table,
+        .log-card tbody {
+          display: block;
+          width: 100%;
+        }
+
+        .log-card thead {
+          display: none;
+        }
+
+        .log-card tr {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 0.4rem;
+          padding: 0.75rem 0;
+          border-bottom: 1px solid var(--border);
+        }
+
+        .log-card tr:last-child {
+          border-bottom: none;
+        }
+
+        .log-card td {
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-start;
+          gap: 0.75rem;
+          padding: 0;
+          border: 0;
+          width: 100%;
+          font-size: 0.95rem;
+          line-height: 1.3;
+        }
+
+        .log-card td::before {
+          content: attr(data-label);
+          font-size: 0.78rem;
+          text-transform: uppercase;
+          letter-spacing: 0.08em;
+          color: var(--subtle);
+          font-weight: 700;
         }
       }
     </style>
@@ -764,12 +835,10 @@
         </div>
         <div class="admin-logs" id="admin-logs">
           <div class="logs-header">
-            <div>
-              <p class="eyebrow">Break logs</p>
-              <p class="muted" id="logs-message">
-                Track how many breaks and total time spent on break per worker.
-              </p>
-            </div>
+          <div>
+            <p class="eyebrow">Break logs</p>
+            <p class="muted hidden" id="logs-message"></p>
+          </div>
             <div class="logs-actions">
               <div class="log-group-select" id="log-group-select" aria-label="Select groups to reset">
                 <p class="muted">Loading groups…</p>
@@ -831,7 +900,7 @@
         { id: "management-office", label: "Management Office" },
         { id: "e-passport", label: "E-passport" },
         { id: "e-passport-arrivals", label: "E-passport (Arrivals)" },
-        { id: "uzak-ucus", label: "Uzak Ucus" },
+        { id: "bus-gate", label: "Bus Gate" },
       ]);
 
       const ADMIN_EMAILS = new Set([
@@ -945,9 +1014,10 @@
 
       function setLogMessage(message = "", isError = false) {
         if (!logsMessage) return;
-        logsMessage.textContent =
-          message || "Track how many breaks and total time spent on break per worker.";
-        logsMessage.classList.toggle("error", isError);
+        const text = message ?? "";
+        logsMessage.textContent = text;
+        logsMessage.classList.toggle("error", Boolean(text) && isError);
+        logsMessage.classList.toggle("hidden", !text);
       }
 
       function syncLogCollapseButtons() {
@@ -1760,7 +1830,7 @@
           if (!roster.length) {
             const empty = document.createElement("p");
             empty.className = "log-empty";
-            empty.textContent = "No staff yet.";
+            empty.textContent = "No users in this group yet.";
             body.appendChild(empty);
             card.appendChild(body);
             fragment.appendChild(card);
@@ -1774,29 +1844,40 @@
           table.appendChild(thead);
 
           const tbody = document.createElement("tbody");
-          const sortedRoster = [...roster].sort((a, b) =>
-            (a.fullName ?? a.email ?? "").localeCompare(b.fullName ?? b.email ?? "", undefined, {
-              sensitivity: "base",
-            })
-          );
+          const sortedRoster = [...roster].sort((a, b) => {
+            const statsA = getBreakStatsForToday(a);
+            const statsB = getBreakStatsForToday(b);
+            const totalA = statsA.breakDurationMs + currentBreakElapsed(a);
+            const totalB = statsB.breakDurationMs + currentBreakElapsed(b);
+            if (totalA !== totalB) return totalB - totalA;
+            return (a.fullName ?? a.email ?? "").localeCompare(
+              b.fullName ?? b.email ?? "",
+              undefined,
+              { sensitivity: "base" }
+            );
+          });
           sortedRoster.forEach((entry) => {
             const stats = getBreakStatsForToday(entry);
             const totalMs = stats.breakDurationMs + currentBreakElapsed(entry);
             const row = document.createElement("tr");
             const workerCell = document.createElement("td");
             workerCell.textContent = entry.fullName ?? entry.email ?? "Unknown worker";
+            workerCell.dataset.label = "Worker";
             row.appendChild(workerCell);
 
             const roleCell = document.createElement("td");
             roleCell.textContent = roleLabel(entry.role) || "No role set";
+            roleCell.dataset.label = "Role";
             row.appendChild(roleCell);
 
             const countCell = document.createElement("td");
             countCell.textContent = String(stats.breakCount ?? 0);
+            countCell.dataset.label = "Breaks";
             row.appendChild(countCell);
 
             const timeCell = document.createElement("td");
             timeCell.textContent = formatDuration(totalMs);
+            timeCell.dataset.label = "Time on break";
             row.appendChild(timeCell);
 
             tbody.appendChild(row);
@@ -2105,15 +2186,20 @@
         const stats = getBreakStatsForToday(currentEntry);
         let breakCount = stats.breakCount;
         let breakDurationMs = stats.breakDurationMs;
+        const startingBreak = Boolean(targetState);
+        const currentlyOnBreak = isOnBreakToday(currentEntry);
         isRosterMutating = true;
         updateActionButtons();
-        setRosterMessage(targetState ? "Starting your break…" : "Ending your break…");
+        setRosterMessage(startingBreak ? "Starting your break…" : "Ending your break…");
 
         const fullName = getCurrentFullName() || currentUser.email;
-        if (!targetState && isOnBreakToday(currentEntry)) {
+        if (startingBreak) {
+          if (!currentlyOnBreak) {
+            breakCount += 1;
+          }
+        } else if (currentlyOnBreak) {
           const joinedAtDate = toDate(currentEntry.joinedAt);
           const elapsed = joinedAtDate ? Math.max(0, Date.now() - joinedAtDate.getTime()) : 0;
-          breakCount += 1;
           breakDurationMs += elapsed;
         }
         const optimisticEntry = {
@@ -2121,8 +2207,8 @@
           email: currentUser.email,
           fullName,
           role: sanitizeRoleId(currentEntry.role) || null,
-          isOnBreak: targetState,
-          joinedAt: targetState ? new Date() : null,
+          isOnBreak: startingBreak,
+          joinedAt: startingBreak ? new Date() : null,
           isOnMealBreak: currentEntry.isOnMealBreak ?? false,
           mealJoinedAt: currentEntry.mealJoinedAt ?? null,
           breakCount,
