--- a/public/index.html
+++ b/public/index.html
@@ -497,6 +497,12 @@
         gap: 0.75rem;
       }
 
+      .logs-heading {
+        display: flex;
+        flex-direction: column;
+        gap: 0.25rem;
+      }
+
       .logs-actions {
         display: flex;
         flex-wrap: wrap;
@@ -835,7 +841,7 @@
         </div>
         <div class="admin-logs" id="admin-logs">
           <div class="logs-header">
-          <div>
+          <div class="logs-heading">
             <p class="eyebrow">Break logs</p>
             <p class="muted hidden" id="logs-message"></p>
           </div>
@@ -1552,16 +1558,29 @@
         const offMealBreakSorted = [...offMealBreakEntries].sort((a, b) =>
           (a.email ?? "").localeCompare(b.email ?? "", undefined, { sensitivity: "base" })
         );
+        const hasRosterEntries = rosterEntries.length > 0;
+        const onBreakEmptyText = hasRosterEntries
+          ? "Nobody is on break right now."
+          : "No one is assigned to this group yet.";
+        const workingEmptyText = hasRosterEntries
+          ? "Nobody is working right now."
+          : "No one is assigned to this group yet.";
+        const onMealEmptyText = hasRosterEntries
+          ? "Nobody is on meal break right now."
+          : "No one is assigned to this group yet.";
+        const offMealEmptyText = hasRosterEntries
+          ? "Everyone is on meal break."
+          : "No one is assigned to this group yet.";
 
-        populateList(onBreakList, onBreakSorted, "Nobody is on break right now.", {
+        populateList(onBreakList, onBreakSorted, onBreakEmptyText, {
           showJoinedAt: true,
         });
-        populateList(offBreakList, workingSorted, "Nobody is working right now.");
-        populateList(onMealBreakList, onMealBreakSorted, "Nobody is on meal break right now.", {
+        populateList(offBreakList, workingSorted, workingEmptyText);
+        populateList(onMealBreakList, onMealBreakSorted, onMealEmptyText, {
           showJoinedAt: true,
           joinedAtKey: "mealJoinedAt",
         });
-        populateList(offMealBreakList, offMealBreakSorted, "Everyone is on meal break.");
+        populateList(offMealBreakList, offMealBreakSorted, offMealEmptyText);
         updateActionButtons();
         syncRoleUI();
       }
@@ -1594,6 +1613,19 @@
           const offEntries = roster.filter((entry) => !isOnBreakToday(entry));
           const onMealEntries = roster.filter((entry) => isOnMealBreakToday(entry));
           const offMealEntries = roster.filter((entry) => !isOnMealBreakToday(entry));
+          const hasRosterEntries = roster.length > 0;
+          const onBreakEmptyText = hasRosterEntries
+            ? "Nobody is on break right now."
+            : "No users in this group yet.";
+          const workingEmptyText = hasRosterEntries
+            ? "Nobody is working right now."
+            : "No users in this group yet.";
+          const onMealEmptyText = hasRosterEntries
+            ? "Nobody is on meal break right now."
+            : "No users in this group yet.";
+          const offMealEmptyText = hasRosterEntries
+            ? "Everyone is on meal break."
+            : "No users in this group yet.";
           const isMinimized = minimizedAdminGroups.has(groupId);
 
           const card = document.createElement("div");
@@ -1643,7 +1675,7 @@
           const onSorted = [...onEntries].sort(
             (a, b) => getTimestampValue(a.joinedAt) - getTimestampValue(b.joinedAt)
           );
-          populateList(onList, onSorted, "Nobody is on break right now.", { showJoinedAt: true });
+          populateList(onList, onSorted, onBreakEmptyText, { showJoinedAt: true });
           body.appendChild(onList);
 
           const divider = document.createElement("div");
@@ -1660,7 +1692,7 @@
           const offSorted = [...offEntries].sort((a, b) =>
             (a.email ?? "").localeCompare(b.email ?? "", undefined, { sensitivity: "base" })
           );
-          populateList(offList, offSorted, "Nobody is working right now.");
+          populateList(offList, offSorted, workingEmptyText);
           body.appendChild(offList);
 
           const dividerMeal = document.createElement("div");
@@ -1677,7 +1709,7 @@
           const onMealSorted = [...onMealEntries].sort(
             (a, b) => getTimestampValue(a.mealJoinedAt) - getTimestampValue(b.mealJoinedAt)
           );
-          populateList(onMealList, onMealSorted, "Nobody is on meal break right now.", {
+          populateList(onMealList, onMealSorted, onMealEmptyText, {
             showJoinedAt: true,
             joinedAtKey: "mealJoinedAt",
           });
@@ -1697,7 +1729,7 @@
           const offMealSorted = [...offMealEntries].sort((a, b) =>
             (a.email ?? "").localeCompare(b.email ?? "", undefined, { sensitivity: "base" })
           );
-          populateList(offMealList, offMealSorted, "Everyone is on meal break.");
+          populateList(offMealList, offMealSorted, offMealEmptyText);
           body.appendChild(offMealList);
 
           card.appendChild(body);
