--- a/public/index.html
+++ b/public/index.html
@@ -1004,8 +1004,8 @@
 
       <section class="card info-card" id="work-info">
         <div class="info-heading">
-          <p class="eyebrow">Info center</p>
-          <h2>Ops overview & meal breaks</h2>
+          <p class="eyebrow">Ops guide</p>
+          <h2>Playbook & meal breaks</h2>
         </div>
         <div class="info-grid">
           <div class="info-section">
