--- a/public/index.html
+++ b/public/index.html
@@ -334,8 +334,8 @@
       }
 
       .info-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        display: flex;
+        flex-direction: column;
         gap: 1rem;
       }
 
@@ -435,6 +435,11 @@
         text-transform: uppercase;
         letter-spacing: 0.08em;
         color: var(--subtle);
+      }
+
+      .shift-table tr:last-child td {
+        border-bottom: 0;
+        padding-bottom: 0;
       }
 
 
@@ -728,6 +733,7 @@
 
       .log-card tr:last-child td {
         border-bottom: none;
+        padding-bottom: 0;
       }
 
       .log-empty {
@@ -812,6 +818,10 @@
 
         .log-card tr:last-child {
           border-bottom: none;
+        }
+
+        .log-card tr:last-child td {
+          padding-bottom: 0;
         }
 
         .log-card td {
