--- a/public/index.html
+++ b/public/index.html
@@ -319,16 +319,23 @@
         gap: 1.2rem;
       }
 
+      #work-info.card {
+        box-shadow: none;
+        border-radius: 12px;
+        border-color: #e3e3e3;
+        padding: 1.4rem;
+      }
+
       .info-heading {
         display: flex;
         flex-direction: column;
-        gap: 0.15rem;
+        gap: 0.1rem;
       }
 
       .info-heading h2,
       .user-email {
         margin: 0;
-        font-size: 1.35rem;
+        font-size: 1.4rem;
         font-weight: 700;
         letter-spacing: -0.01em;
       }
@@ -336,7 +343,7 @@
       .info-grid {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 1.25rem;
       }
 
       .info-section {
@@ -355,36 +362,44 @@
         letter-spacing: -0.01em;
       }
 
+      .dept-section {
+        border: 0;
+        background: transparent;
+        padding: 0;
+        gap: 1rem;
+      }
+
       .info-list {
         list-style: none;
         padding: 0;
         margin: 0;
         display: flex;
         flex-direction: column;
-        gap: 0.9rem;
+        gap: 1rem;
       }
 
       .info-item {
         display: flex;
         flex-direction: column;
-        gap: 0.5rem;
-        padding: 0.75rem;
-        border-radius: 12px;
-        background: var(--card);
-        border: 1px solid var(--border);
+        gap: 0.65rem;
+        padding: 1rem 1rem 1.1rem;
+        border-radius: 6px;
+        background: #ededed;
+        border: 1px solid #e3e3e3;
       }
 
       .info-item-header {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 0.5rem;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.2rem;
       }
 
       .info-item-title {
         margin: 0;
         font-weight: 700;
         letter-spacing: -0.01em;
+        font-size: 1.05rem;
       }
 
       .info-item-desc {
@@ -398,14 +413,15 @@
         margin: 0;
         display: flex;
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 0.85rem;
       }
 
       .faq-row {
-        border: 1px solid var(--border);
-        border-radius: 10px;
-        padding: 0.65rem 0.75rem;
-        background: var(--surface);
+        border: 1px solid #ededed;
+        border-radius: 2px;
+        padding: 0.9rem 1rem;
+        background: #ffffff;
+        box-shadow: none;
       }
 
       .faq-question {
@@ -414,7 +430,7 @@
       }
 
       .faq-answer {
-        margin: 0.2rem 0 0;
+        margin: 0.35rem 0 0;
         color: var(--subtle);
       }
 
@@ -1015,11 +1031,11 @@
       <section class="card info-card" id="work-info">
         <div class="info-heading">
           <p class="eyebrow">Ops guide</p>
-          <h2>Playbook & meal breaks</h2>
+          <h2>departments & quick FAQs</h2>
         </div>
         <div class="info-grid">
-          <div class="info-section">
-            <p class="info-section-title">Departments & quick FAQs</p>
+          <div class="info-section dept-section">
+            <p class="info-section-title sr-only">Departments & quick FAQs</p>
             <ul class="info-list" id="department-list"></ul>
           </div>
           <div class="info-section shift-section">
