--- a/public/index.html
+++ b/public/index.html
@@ -329,13 +329,13 @@
       .info-heading {
         display: flex;
         flex-direction: column;
-        gap: 0.1rem;
+        gap: 0.15rem;
       }
 
       .info-heading h2,
       .user-email {
         margin: 0;
-        font-size: 1.4rem;
+        font-size: 1.35rem;
         font-weight: 700;
         letter-spacing: -0.01em;
       }
@@ -343,7 +343,7 @@
       .info-grid {
         display: flex;
         flex-direction: column;
-        gap: 1.25rem;
+        gap: 1rem;
       }
 
       .info-section {
@@ -356,17 +356,17 @@
         gap: 0.75rem;
       }
 
-      .info-section-title {
-        margin: 0;
-        font-weight: 700;
-        letter-spacing: -0.01em;
-      }
-
-      .dept-section {
+      .info-section.departments-section {
         border: 0;
         background: transparent;
         padding: 0;
         gap: 1rem;
+      }
+
+      .info-section-title {
+        margin: 0;
+        font-weight: 700;
+        letter-spacing: -0.01em;
       }
 
       .info-list {
@@ -375,24 +375,24 @@
         margin: 0;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.9rem;
       }
 
       .info-item {
         display: flex;
         flex-direction: column;
-        gap: 0.65rem;
-        padding: 1rem 1rem 1.1rem;
-        border-radius: 6px;
-        background: #ededed;
-        border: 1px solid #e3e3e3;
+        gap: 0.5rem;
+        padding: 0.75rem;
+        border-radius: 12px;
+        background: var(--surface);
+        border: 1px solid var(--border);
       }
 
       .info-item-header {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 0.2rem;
+        gap: 0.5rem;
       }
 
       .info-item-title {
@@ -413,14 +413,14 @@
         margin: 0;
         display: flex;
         flex-direction: column;
-        gap: 0.85rem;
+        gap: 0.8rem;
       }
 
       .faq-row {
-        border: 1px solid #ededed;
-        border-radius: 2px;
-        padding: 0.9rem 1rem;
-        background: #ffffff;
+        border: 1px solid var(--border);
+        border-radius: 10px;
+        padding: 0.65rem 0.75rem;
+        background: var(--bg);
         box-shadow: none;
       }
 
@@ -430,7 +430,7 @@
       }
 
       .faq-answer {
-        margin: 0.35rem 0 0;
+        margin: 0.2rem 0 0;
         color: var(--subtle);
       }
 
@@ -1034,7 +1034,7 @@
           <h2>departments & quick FAQs</h2>
         </div>
         <div class="info-grid">
-          <div class="info-section dept-section">
+          <div class="info-section departments-section">
             <p class="info-section-title sr-only">Departments & quick FAQs</p>
             <ul class="info-list" id="department-list"></ul>
           </div>
