--- a/public/index.html
+++ b/public/index.html
@@ -321,9 +321,9 @@
 
       #work-info.card {
         box-shadow: none;
-        border-radius: 12px;
-        border-color: #e3e3e3;
-        padding: 1.4rem;
+        border-radius: 20px;
+        border-color: var(--border);
+        padding: 1.75rem;
       }
 
       .info-heading {
@@ -382,8 +382,8 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        padding: 0.75rem;
-        border-radius: 12px;
+        padding: 1rem;
+        border-radius: 16px;
         background: var(--surface);
         border: 1px solid var(--border);
       }
