--- a/public/index.html
+++ b/public/index.html
@@ -418,7 +418,7 @@
 
       .faq-row {
         border: 1px solid var(--border);
-        border-radius: 10px;
+        border-radius: 12px;
         padding: 0.65rem 0.75rem;
         background: var(--bg);
         box-shadow: none;
@@ -791,6 +791,10 @@
           padding: 1.25rem;
         }
 
+        #work-info.card {
+          padding: 1.25rem;
+        }
+
         .lists {
           gap: 0.75rem;
         }
@@ -1031,11 +1035,11 @@
       <section class="card info-card" id="work-info">
         <div class="info-heading">
           <p class="eyebrow">Ops guide</p>
-          <h2>departments & quick FAQs</h2>
+          <h2>Departments & FAQs</h2>
         </div>
         <div class="info-grid">
           <div class="info-section departments-section">
-            <p class="info-section-title sr-only">Departments & quick FAQs</p>
+            <p class="info-section-title sr-only">Departments & FAQs</p>
             <ul class="info-list" id="department-list"></ul>
           </div>
           <div class="info-section shift-section">
